trying to fix tutorial link aligning

--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -78,6 +78,11 @@ nav {
     margin-right: 4%;
 }
 
+#left2 {
+  width:60%;
+  margin-right: 0%;
+}
+
 #right {
     width:35%;
 }
